VSE: Proxy rendering of Meta Strips fails #83266

Closed
opened 2020-12-01 06:47:10 +01:00 by tintwotin · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: RTX 2060 - Build 26.20.100.7870

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: (newest version of Blender that worked as expected)

Short description of error
When rendering proxy-file for a Meta Strip, in spite substantial render time(with ex. a scene strip inside the meta strip), it only produces a folder called images, containing a subfolder named after the project fps containing one image file called '(null)_proxy.jpg'
{F9418106,size=full}

Exact steps for others to reproduce the error

  • Add any type of strip, ex. a Color strip.
  • Convert it to a Meta strip.
  • In the Sidebar, select proxy.
  • Check the Proxy panel.
  • Select Directory and specify it.
  • Hit Rebuild Proxy.
  • When finished rendering, check the output directory.

On a different note, would be nice if proxy rendering of Meta and Scene strips would work, in order to improve performance.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: RTX 2060 - Build 26.20.100.7870 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: (newest version of Blender that worked as expected) **Short description of error** When rendering proxy-file for a Meta Strip, in spite substantial render time(with ex. a scene strip inside the meta strip), it only produces a folder called images, containing a subfolder named after the project fps containing one image file called '(null)_proxy.jpg' {[F9418106](https://archive.blender.org/developer/F9418106/image.png),size=full} **Exact steps for others to reproduce the error** - Add any type of strip, ex. a Color strip. - Convert it to a Meta strip. - In the Sidebar, select proxy. - Check the Proxy panel. - Select Directory and specify it. - Hit Rebuild Proxy. - When finished rendering, check the output directory. On a different note, would be nice if proxy rendering of Meta and Scene strips would work, in order to improve performance.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
tintwotin changed title from VSE: Rendering of Meta Strips fails to VSE: Proxy rendering of Meta Strips fails 2020-12-01 08:05:34 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I think in 2.80-ish building proxies on meta strips worked in a way that it build proxies of movie strips inside.

I will be fine supporting proxies for scenes, I wanted to look into it quite some time ago but I (still) need some time to think about design. These strips don't have a source media so this has to be somehow made to work on per-strip basis.
That is at least for "legacy" support ot for case where you provide images/video from external software or just render scene images manually. Also EXR's would be prefered for scenes, and even for any kind of serious video editing.

For building I will prefer to have solution using disk cache, them we can think about building image/video proxies.

I think in 2.80-ish building proxies on meta strips worked in a way that it build proxies of movie strips inside. I will be fine supporting proxies for scenes, I wanted to look into it quite some time ago but I (still) need some time to think about design. These strips don't have a source media so this has to be somehow made to work on per-strip basis. That is at least for "legacy" support ot for case where you provide images/video from external software or just render scene images manually. Also EXR's would be prefered for scenes, and even for any kind of serious video editing. For building I will prefer to have solution using disk cache, them we can think about building image/video proxies.

This issue was referenced by 744fa41e7e

This issue was referenced by 744fa41e7ef3a16c3efa46e07183b66f1590584d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-01-25 05:08:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83266
No description provided.